actors interview aggregation back + front

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Aggregator - Discover Movie Content</title>
-    <meta name="description" content="Find trailers, interviews, behind-the-scenes footage, and more for your favorite movies." />
+    <title>Movie Actors - Discover Actor Interviews & Movie Content</title>
+    <meta name="description" content="Find actor interviews, trailers, behind-the-scenes footage, and more for your favorite movies." />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
