--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Actors - Discover Actor Interviews & Movie Content</title>
-    <meta name="description" content="Find actor interviews, trailers, behind-the-scenes footage, and more for your favorite movies." />
+    <meta name="theme-color" content="#fbbf24" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <title>Movie Actors - Discover Movie Interviews</title>
+    <meta name="description" content="Search for your favorite movies and explore exclusive interviews with actors, behind-the-scenes content, trailers, and soundtracks." />
   </head>
   <body>
     <div id="root"></div>
